// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalCurtain renders \`accessibilityLabel\` 1`] = `
<body>
  <div />
  <div
    aria-label="goosegoosegoose"
    role="dialog"
    tabindex="-1"
  />
</body>
`;

exports[`ModalCurtain renders a basic curtain 1`] = `
<body>
  <div />
  <div
    aria-label="Modal"
    role="dialog"
    tabindex="-1"
  />
</body>
`;

exports[`ModalCurtain renders modal in \`entered\` stage 1`] = `
<body>
  <div />
  <div
    aria-label="Modal"
    role="dialog"
    tabindex="-1"
  />
</body>
`;

exports[`ModalCurtain renders modal in \`entering\` stage 1`] = `
<body>
  <div />
  <div
    aria-label="Modal"
    role="dialog"
    tabindex="-1"
  />
</body>
`;

exports[`ModalCurtain renders modal in \`exited\` stage 1`] = `
<body>
  <div />
  <div
    aria-label="Modal"
    role="dialog"
    tabindex="-1"
  />
</body>
`;

exports[`ModalCurtain renders modal in \`exiting\` stage 1`] = `
<body>
  <div />
  <div
    aria-label="Modal"
    role="dialog"
    tabindex="-1"
  />
</body>
`;
